--- a/mappe.json
+++ b/mappe.json
@@ -5,18 +5,18 @@
     "name" : "Virtus",
   "difficulty": 5,
   "mappa": [
-    ["4","","2","5","GREEN"],
-    ["","","6","GREEN","2"],
-    ["","3","GREEN","4",""],
-    ["5","GREEN","1","",""]
+    ["FOUR","","TWO","FIVE","GREEN"],
+    ["","","SIX","GREEN","TWO"],
+    ["","THREE","GREEN","FOUR",""],
+    ["FIVE","GREEN","ONE","",""]
   ]},
   {"name" : "Kaleidoscopic Dream",
   "difficulty": 4,
   "mappa": [
-    ["YELLOW","BLUE","","","1"],
-    ["GREEN","","5","","4"],
-    ["3","","3","","5"],
-    ["2","","","BLUE","YELLOW"]
+    ["YELLOW","BLUE","","","ONE"],
+    ["GREEN","","FIVE","","FOUR"],
+    ["THREE","","RED","","FIVE"],
+    ["TWO","","","BLUE","YELLOW"]
   ]}
   ]}
   ]
