--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,6 @@
                     </archive>
                 </configuration>
             </plugin>
-
             <!-- Jacoco is a code coverage library that allows basic report creation -->
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -82,6 +81,19 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>it.polimi.se2018.App</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
             </plugin>
 
             <!-- SonarQube analysis on Maven projects -->
